# aria

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
aria/: __init__.py  __main__.py  config.py  orchestrator.py
aria/agents/: __init__.py  critic.py  planner.py  researcher.py  synthesizer.py
aria/graph/: __init__.py  builder.py  state.py
aria/mcp/: __init__.py  arxiv_server.py  client.py  registry.py  servers.py
aria/nlp/: __init__.py  deduplicator.py  extractor.py  pipeline.py  summarizer.py
aria/prompts/: __init__.py  base.py  critic_prompt.py  planner_prompt.py  registry.py  synthesizer_prompt.py
tests/: test_graph_state.py  test_nlp_pipeline.py  test_prompts.py
