[project]
name = "aria"
version = "0.1.0"
description = "Agentic Research & Intelligence Assistant"
requires-python = ">=3.11"
dependencies = [
    "langchain ~=0.3",
    "langgraph ~=0.4",
    "langsmith ~=0.3",
    "langchain-anthropic ~=0.3",
    "anthropic ~=0.49",
    "spacy ~=3.8",
    "transformers ~=4.51",
    "mcp ~=1.8",
    "typer ~=0.15",
    "rich ~=13.9",
    "pydantic ~=2.11",
    "pydantic-settings ~=2.9",
    "python-dotenv ~=1.1",
    "tavily-python ~=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest ~=8.3",
    "ruff ~=0.11",
]

[project.scripts]
aria = "aria.cli:app"

[tool.setuptools.packages.find]
include = ["aria*"]

[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
